<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/movie_projector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellcome_login_page"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_content"
            android:textSize="15sp"
            android:textColor="@color/gray"
            />

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_marginTop="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:textSize="17sp"
            android:paddingHorizontal="50dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_button"
            />

        <Button
            android:id="@+id/nww_accont_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account_button_text"
            android:textSize="17sp"
            android:paddingHorizontal="50dp"
            android:textColor="@color/blue_button"
            />



</LinearLayout>