<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_activity_foreground"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/ticket"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ticket"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.12"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_account"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ticket"
        app:layout_constraintStart_toStartOf="parent"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        android:columnCount="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.79"

        >
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:backgroundTint="@color/brow"
                app:cardCornerRadius="10dp"
                android:layout_marginEnd="20dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_free_card"
                    android:textSize="19sp"
                    android:paddingTop="10dp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_marginTop="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_button"
                    android:text="@string/value_free_card"
                    android:textSize="17sp"
                    android:textAlignment="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:backgroundTint="@color/brow"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/text_plan_card"
                android:textSize="19sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_button"
                android:text="@string/value_plan_card"
                android:textSize="17sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Next"
        android:paddingHorizontal="70dp"
        android:backgroundTint="@color/blue_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.94"
        />

</androidx.constraintlayout.widget.ConstraintLayout>